# personal-voice-tts-ai

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  PHASE1_PROMPT.md  README.md  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-dev.txt  requirements-gui.txt  requirements-tts.txt  requirements.txt  run.bat  run.py  run.sh  setup.py
algorithms/: __init__.py  base.py
algorithms/ai_based/: __init__.py  embedding_matcher.py  embeddings.py  hybrid.py
algorithms/random/: __init__.py  random_matcher.py
algorithms/traditional/: __init__.py  energy.py  mfcc.py  rhythm.py  spectral.py
cli/: __init__.py  ai_similarity.py  basic.py  batch.py  similarity.py  synthesize.py  tts.py
config/: __init__.py  ai_models.yml  batch.yml  config.default.yml  gui.yml  similarity.yml  synthesis.yml  tts.yml
config/workflows/: audio_matching.yml  batch_synthesis.yml  tts_collage.yml
core/: __init__.py
core/ai/: __init__.py  metadata.py  model_manager.py
core/audio/: __init__.py  analysis.py  io.py  metadata.py
core/batch/: __init__.py  error_handler.py  pipeline.py  processor.py  progress.py  queue.py  results.py
core/similarity/: __init__.py  manager.py  matcher.py
core/synthesis/: __init__.py  blending.py  cache.py  engine.py  enhancement.py  extractor.py  metrics.py  pitch.py  prosody.py  tempo.py
core/tts/: __init__.py  base.py  batch.py  pipeline.py  preprocessing.py
core/tts/backends/: __init__.py  edge_backend.py  gtts_backend.py  pyttsx3_backend.py
docs/: installation.md  quickstart.md
examples/: README.md  basic_synthesis.py  batch_processing.py  tts_collage.py
gui/: __init__.py  app.py
gui/dialogs/: __init__.py  help.py  settings.py
gui/panels/: __init__.py  batch_panel.py  synthesis_panel.py  tts_panel.py
gui/themes/: __init__.py  theme_manager.py
gui/themes/win98/: __init__.py  colors.py  style.qss
gui/widgets/: __init__.py  player.py  spectrogram.py  waveform.py
tests/: __init__.py  conftest.py  test_ai_algorithms.py  test_ai_embeddings.py  test_ai_metadata.py  test_ai_model_manager.py  test_algorithm_manager.py  test_analysis.py  test_audio_io.py  test_base.py  test_batch.py  test_metadata.py  test_segment_matcher.py  test_similarity_algorithms.py  test_synthesis.py  test_tts.py
utils/: __init__.py  logging.py  synthesis_viz.py  temp_manager.py  validators.py
web/: __init__.py  app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
