[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-voice-tts-ai"
version = "0.9.0"
description = "음성 콜라주 및 합성 기반의 고급 TTS 시스템"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kyungmin Kim", email = "oswardfish@outlook.kr"}
]
keywords = ["tts", "audio", "speech", "synthesis", "voice", "ai", "deep-learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.4",
]
tts = [
    "gTTS>=2.3.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
]
gui = [
    "PyQt6>=6.5.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
all = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.4",
    "gTTS>=2.3.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "PyQt6>=6.5.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
pvtts-basic = "cli.basic:main"
pvtts-similarity = "cli.similarity:main"
pvtts-ai = "cli.ai_similarity:main"
pvtts-synthesize = "cli.synthesize:main"
pvtts-tts = "cli.tts:main"
pvtts-batch = "cli.batch:main"
pvtts-gui = "gui.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/personal-voice-tts-ai"
Documentation = "https://personal-voice-tts-ai.readthedocs.io"
Repository = "https://github.com/yourusername/personal-voice-tts-ai"
Issues = "https://github.com/yourusername/personal-voice-tts-ai/issues"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
